--- a/widgets/lrw-cta/styles/style.less
+++ b/widgets/lrw-cta/styles/style.less
@@ -10,6 +10,11 @@
     border: 1px solid darken(@background_color, 10%);
     border-radius: .3em;
 
+    .lrw-cta-wrapper {
+    	display: table;
+    	width: 100%;
+    }
+
 	.lrw-cta-texts {
 		display: table-cell;
 		vertical-align: middle;
@@ -28,16 +33,5 @@
 		padding-left: 1em;
 		vertical-align: middle;
 		width: 30%;
-	}
-}
-
-@media (max-width: 520px) {
-	.lrw-cta {
-		.lrw-cta-button {
-			width: auto;
-		    padding: 0;
-		    white-space: nowrap;
-		    display: block;
-		}
 	}
 }
