--- a/widgets/lrw-feature/styles/style.less
+++ b/widgets/lrw-feature/styles/style.less
@@ -9,7 +9,7 @@
 @icon_align: center;
 @shape_format: none;
 @shape_color: #41a9d5;
-@icon_color: @shape_color;
+@icon_color: #41a9d5;
 @icon_size: 4em;
 @image_padding: 1em;
 @heading_color: inherit;
@@ -46,8 +46,8 @@
 		// shape color
 		.icon-inner {
 			color: @icon_color;
-			border: 2px solid transparent;
 		    display: inline-block;
+		    position: relative;
 		    text-align: center;
 
 		    span {
@@ -126,13 +126,19 @@
 			background-color: @shape_color;
 		}
 
-		.icon-element-outline {}
+		.icon-element-outline {
+			border: 2px solid @shape_color;
+		}
 
 		// icon shape formats
 		.icon-inner {
 			&.icon-shape-none {
 				border: 0;
 	    		background: transparent;
+	    		height: auto;
+			    line-height: normal;
+			    width: auto;
+			    position: relative;
 	    	}
 		}
 
