--- a/widgets/lrw-icon/styles/style.less
+++ b/widgets/lrw-icon/styles/style.less
@@ -9,7 +9,7 @@
 @icon_align: center;
 @shape_format: none;
 @shape_color: #41a9d5;
-@icon_color: @shape_color;
+@icon_color: #41a9d5;
 @icon_size: 4em;
 @image_padding: 1em;
 
@@ -39,25 +39,11 @@
 
 	a {
 		display: block;
-		position: relative;
-
-		.overlay-icon {
-		    opacity: 0;
-		    position: absolute;
-		    top: 0;
-		    width: 100%;
-		    height: 100%;
-		    box-sizing: border-box;
-			background: rgba(255,255,255,0.5);
-		    border-radius: 0;
-		}
-
-		&:hover,
-		&:focus {
-			.overlay-icon {
-				opacity: 1;
-			}
-		}
+	    position: absolute;
+	    width: 100%;
+	    height: 100%;
+	    z-index: 1;
+	    top: 0;
 	}
 
 	.element-shape_icon {
@@ -65,8 +51,8 @@
 		// shape color
 		.icon-inner {
 			color: @icon_color;
-			border: 2px solid transparent;
 		    display: inline-block;
+		    position: relative;
 		    text-align: center;
 
 		    span {
@@ -145,13 +131,19 @@
 			background-color: @shape_color;
 		}
 
-		.icon-element-outline {}
+		.icon-element-outline {
+			border: 2px solid @shape_color;
+		}
 
 		// icon shape formats
 		.icon-inner {
 			&.icon-shape-none {
 				border: 0;
 	    		background: transparent;
+	    		height: auto;
+			    line-height: normal;
+			    width: auto;
+			    position: relative;
 	    	}
 		}
 
