--- a/widgets/lrw-member/styles/style.less
+++ b/widgets/lrw-member/styles/style.less
@@ -71,8 +71,10 @@
 
 		img {
 			display: inline-block;
+		    height: auto;
 		    max-width: 100%;
 		    vertical-align: top;
+    		width: auto;
 
 			&.image-shape-circle,
 			&.image-shape-outline-circle {
@@ -87,43 +89,31 @@
 	}
 
 	.person-social-profiles {
-		padding-left: 0;
 	    list-style: none;
+	    margin: 0;
+		padding: 0;
 
 	    li {
 	    	display: inline-block;
+	    	margin: 0;
 	    	padding: 0 5px;
 
 	    	a {
-	    		display: inline-block;
-	    		position: relative;
-
-	    		.overlay-icon {
-				    opacity: 0;
-				    position: absolute;
-				    top: 0;
-				    width: 100%;
-				    height: 100%;
-				    box-sizing: border-box;
-					background: rgba(255,255,255,0.5);
-				    border-radius: 0;
-				}
-
-				&:hover,
-	    		&:focus {
-	    			.overlay-icon {
-	    				opacity: 1;
-	    			}
-	    		}
+	    		display: block;
+			    position: absolute;
+			    width: 100%;
+			    height: 100%;
+			    z-index: 1;
+			    top: 0;
 	    	}
 	    }
 
 		.element-shape_icon {
 			// shape color
 			.icon-inner {
-				color: @icon_color;
 				border: 2px solid transparent;
 			    display: inline-block;
+			    position: relative;
 			    text-align: center;
 
 			    span {
@@ -187,6 +177,9 @@
 				&.icon-shape-none {
 					border: 0;
 		    		background: transparent;
+				    height: auto;
+		    		line-height: normal;
+				    width: auto;
 		    	}
 			}
 
