--- a/widgets/lrw-feature/styles/style.less
+++ b/widgets/lrw-feature/styles/style.less
@@ -7,15 +7,20 @@
 
 /* Variables */
 @icon_align: center;
-@shape_format: none;
 @shape_color: #41a9d5;
 @icon_color: #41a9d5;
-@icon_size: 4em;
 @image_padding: 1em;
 @heading_color: inherit;
 @heading_align: center;
 @text_color: inherit;
 @text_align: center;
+@margin_bottom: 10px;
+@margin_top: 0px;
+@icon-size-lg: 2.5em;
+@icon-size-2x: 3.15em;
+@icon-size-3x: 4em;
+@icon-size-4x: 5em;
+@icon-size-5x: 7.15em;
 
 .lrw-feature {
 	// icon element align
@@ -41,89 +46,123 @@
 	}
 	.lrw-icon-align();
 
-	.element-shape_icon {
+	&.icon-position-left,
+	&.icon-position-right {
+		position: relative;
+
+		.lrw-icon-element { position: absolute; }
+
+		&.padding-size-lg {
+			.element-shape_icon,
+			.element-shape_image {
+				.icon-inner {
+					&.icon-shape-none {
+					    line-height: @icon-size-lg - 0.5;
+			    	}
+				}
+			}
+		}
+	}
+
+	&.icon-position-left {
+		&.has-shape { &.padding-size-lg { padding-left: @icon-size-lg + 1; } }
+		&.padding-size-lg { padding-left: @icon-size-lg - 0.5; }
+
+		&.has-shape { &.padding-size-2x { padding-left: @icon-size-2x + 1; } }
+		&.padding-size-2x { padding-left: @icon-size-2x - 0.15; }
+
+		&.has-shape { &.padding-size-3x { padding-left: @icon-size-3x + 1; } }
+		&.padding-size-3x { padding-left: @icon-size-3x - 0.5; }
+
+		&.has-shape { &.padding-size-4x { padding-left: @icon-size-4x + 1; } }
+		&.padding-size-4x { padding-left: @icon-size-4x - 0.5; }
+
+		&.has-shape { &.padding-size-5x { padding-left: @icon-size-5x + 1; } }
+		&.padding-size-5x { padding-left: @icon-size-5x - 0.75; }
+
+		.lrw-icon-element { left: 0; }
+	}
+
+	&.icon-position-right {
+		&.has-shape { &.padding-size-lg { padding-right: @icon-size-lg + 1; } }
+		&.padding-size-lg { padding-right: @icon-size-lg - 0.5; }
+
+		&.has-shape { &.padding-size-2x { padding-right: @icon-size-2x + 1; } }
+		&.padding-size-2x { padding-right: @icon-size-2x - 0.15; }
+
+		&.has-shape { &.padding-size-3x { padding-right: @icon-size-3x + 1; } }
+		&.padding-size-3x { padding-right: @icon-size-3x - 0.5; }
+
+		&.has-shape { &.padding-size-4x { padding-right: @icon-size-4x + 1; } }
+		&.padding-size-4x { padding-right: @icon-size-4x - 0.5; }
+
+		&.has-shape { &.padding-size-5x { padding-right: @icon-size-5x + 1; } }
+		&.padding-size-5x { padding-right: @icon-size-5x - 0.75; }
+
+		.lrw-icon-element { right: 0; }
+	}
+
+	.element-shape_icon,
+	.element-shape_image {
 
 		// shape color
-		.icon-inner {
+		.icon-inner,
+		.image-wrapper {
 			color: @icon_color;
 		    display: inline-block;
 		    position: relative;
 		    text-align: center;
 
-		    span {
-		    	line-height: inherit;
-		    }
+		    span { line-height: inherit; }
 
 		    &.icon-size-lg {
-		    	line-height: 2.5em;
-		    	width: 2.5em;
-		    	height: 2.5em;
+		    	line-height: @icon-size-lg;
+		    	width: @icon-size-lg;
+		    	height: @icon-size-lg;
 
-		    	span {
-		    		font-size: 1.2em;
-		    	}
+		    	span { font-size: 1.2em; }
 		    }
 
 		    &.icon-size-2x {
-		    	line-height: 3.15em;
-		    	width: 3.15em;
-		    	height: 3.15em;
+		    	line-height: @icon-size-2x;
+		    	width: @icon-size-2x;
+		    	height: @icon-size-2x;
 
-		    	span {
-		    		font-size: 1.8em;
-		    	}
+		    	span { font-size: 1.8em; }
 		    }
 
 		    &.icon-size-3x {
-		    	line-height: 4em;
-		    	width: 4em;
-		    	height: 4em;
+		    	line-height: @icon-size-3x;
+		    	width: @icon-size-3x;
+		    	height: @icon-size-3x;
 
-		    	span {
-		    		font-size: 2.5em;
-		    	}
+		    	span { font-size: 2.5em; }
 		    }
 
 		    &.icon-size-4x {
-		    	line-height: 5em;
-		    	width: 5em;
-		    	height: 5em;
+		    	line-height: @icon-size-4x;
+		    	width: @icon-size-4x;
+		    	height: @icon-size-4x;
 
-		    	span {
-		    		font-size: 2.85em;
-		    	}
+		    	span { font-size: 2.85em; }
 		    }
 
 		    &.icon-size-5x {
-		    	line-height: 7.15em;
-		    	width: 7.15em;
-		    	height: 7.15em;
+		    	line-height: @icon-size-5x;
+		    	width: @icon-size-5x;
+		    	height: @icon-size-5x;
 
-		    	span {
-		    		font-size: 5em;
-		    	}
+		    	span { font-size: 5em; }
 		    }
 		}
-	}
 
-	.element-shape_image {
-		.image-wrapper {
-			display: inline-block;
-			padding: @image_padding;
-		    max-width: 100%;
-		    vertical-align: top;
-
-		    &.overflow-hidden {
-		    	overflow: hidden;
-		    }
-		}
-	}
-
-	.element-shape_icon,
-	.element-shape_image {
 		// square or not
 		.icon-element-background {
 			background-color: @shape_color;
+
+			&.no-bg {
+				background-color: transparent;
+			}
 		}
 
 		.icon-element-outline {
@@ -162,6 +201,18 @@
 		}
 	}
 
+	.element-shape_image {
+		.image-wrapper {
+			display: inline-block;
+			padding: @image_padding;
+		    vertical-align: top;
+
+		    &.overflow-hidden {
+		    	overflow: hidden;
+		    }
+		}
+	}
+
 	.feature-content {
 		// heading align
 		.lrw-heading-align() when (@heading_align = left) {
@@ -185,6 +236,8 @@
 
 		.feature-heading {
 			color: @heading_color;
+			margin-bottom: @margin_bottom;
+			margin-top: @margin_top;
 		}
 
 		// text align
@@ -210,6 +263,5 @@
 		.feature-text {
 			color: @text_color;
 		}
-
 	}
 }
